--- a/ee/web/WEB-INF/web.xml
+++ b/ee/web/WEB-INF/web.xml
@@ -4,4 +4,9 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
+    <filter>
+        <filter-name>MyFilter</filter-name>
+        <filter-class></filter-class>
+    </filter>
+    
 </web-app>
