--- a/ee/web/WEB-INF/web.xml
+++ b/ee/web/WEB-INF/web.xml
@@ -6,7 +6,11 @@
 
     <filter>
         <filter-name>MyFilter</filter-name>
-        <filter-class></filter-class>
+        <filter-class>Filters.NewFilter</filter-class>
     </filter>
+    <filter-mapping>
+        <filter-name>MyFilter</filter-name>
+        <url-pattern>/hello</url-pattern>
+    </filter-mapping>
     
 </web-app>
