--- a/ee/web/WEB-INF/web.xml
+++ b/ee/web/WEB-INF/web.xml
@@ -14,6 +14,10 @@
     </filter-mapping>
     <filter-mapping>
         <filter-name>MyFilter</filter-name>
+        <url-pattern>/AddToDB</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>MyFilter</filter-name>
         <url-pattern>/Signup.jsp</url-pattern>
     </filter-mapping>
     <filter-mapping>
